Fix the some issuse on mobile mode wallet and user

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,11 +2,14 @@ $mobile: "screen and (max-width: 767px)";
 $tablet: "screen and (min-width: 768px) and (max-width: 1024px)";
 $tui-desktop: "screen and (min-width: 1025px)";
 $background-color: #383838;
+$background-wallet-color: #282828;
 $background-color-header-scrolled: rgba(25, 27, 31, 0.9);
 $gradient-border-start: #f86f64;
 $gradient-border-end: #fc5392;
 $gradient-border-box-start:#ffb2bd;
 $gradient-border-box-end:#fec1a1;
+$gradient-wallet-header-start:#f86f64;
+$gradient-wallet-header-end:#fc5392;
 $image-logo-start: rgba(255, 255, 255, 1);
 $image-logo-end: rgba(250, 129, 136, 1);
 $links-color-main: #fb6081;
