--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -103,5 +103,6 @@
   }
   .page {
     min-width: 300px;
+    padding: 10px;
   }
 }
