--- a/src/app/account/user-account/user-account.component.scss
+++ b/src/app/account/user-account/user-account.component.scss
@@ -1,3 +1,5 @@
+@import "../../../variables";
+
 .image-logo {
   width: 3rem;
 }
@@ -6,7 +8,14 @@
   height: 30px;
   margin-right: 1rem;
 }
-
+ .my-account{
+  display: flex;
+  flex-direction: column;
+  padding:10px;
+  border: 3px solid white;
+  border-radius: 20px;
+  gap: 10px;
+ }
 
 .button-get-started {
   color: aliceblue;
@@ -44,5 +53,34 @@
 }
 
 .wallet-address {
-  background-color: #282828;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 7px;
+  border-radius: 20px;
+  padding: 10px;
+  background-color: $background-wallet-color;
+}
+
+@media #{$tablet} {
+  .wallet{
+    min-width: 0px;
+  }
+  .wallet-address {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+}
+@media #{$mobile} {
+  .wallet{
+    min-width: 0px;
+  }
+  .wallet-address {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
 }
